# rubicks-solver

./: .gitignore  LICENSE  Makefile  README.md  THIRD_PARTY_LICENSES.md
.github/workflows/: ci.yml
backend/: pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  routes.py  schemas.py
backend/app/cube/: __init__.py  complete_missing_face.py  coordinates.py  facelets.py  model.py  moves.py  solver.py  validation.py
backend/app/sessions/: __init__.py  store.py
backend/app/vision/: __init__.py  colors.py  processing.py
backend/tests/: test_api.py  test_cube.py  test_missing_face_completion.py  test_solver.py  test_validation.py  test_vision.py
frontend/: eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/e2e/: camera.spec.ts  demo.spec.ts
frontend/src/: App.tsx  styles.css  types.ts
frontend/src/api/: client.ts
frontend/src/camera/: CameraCapture.tsx  CapturedFaces.tsx  analyzer.ts  autoCapture.ts  capturePolicy.ts  useCameraController.ts
frontend/src/cube/: CubeNetEditor.tsx  cube.ts
frontend/src/guidance/: guidance.ts  (+5 more)
frontend/tests/: analyzer.test.ts  api.test.ts  app.test.tsx  arrowOverlay.test.tsx  autoCapture.test.ts  camera.test.tsx  capturePolicy.test.ts  capturedFaces.test.tsx  cube.test.ts  guidance.test.ts  projection.test.ts  solutionGuide.test.tsx  solvedCamera.test.tsx
scripts/: dev-mobile.sh  dev.sh  generate_test_images.py  mobile-cert.sh
test-data/: README.md  move-facelet-permutations.json  states.json
