[project]
name = "rubicks-solver-backend"
version = "0.1.0"
description = "Local camera and optimal solver backend for a 2x2 Rubik's Cube"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.116,<1",
  "numpy>=2.1,<3",
  "opencv-python-headless>=4.10,<5",
  "pydantic>=2.10,<3",
  "python-multipart>=0.0.20,<1",
  "scikit-learn>=1.6,<2",
  "scipy>=1.15,<2",
  "uvicorn[standard]>=0.34,<1",
]

[dependency-groups]
dev = [
  "httpx>=0.28,<1",
  "hypothesis>=6.125,<7",
  "pytest>=8.3,<9",
  "pytest-cov>=6,<7",
  "ruff>=0.11,<1",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.ruff.format]
quote-style = "double"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

